# flix-app-streamlit

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
actors/: page.py  repository.py  service.py
api/: service.py
genres/: page.py  repository.py  service.py
home/: page.py
login/: page.py  service.py
movies/: page.py  repository.py  service.py
reviews/: page.py  repository.py  service.py
